--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/packages.config
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/packages.config
@@ -22,6 +22,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages.OAuth" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
